--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <ul class="list-item">
-            <li class="item"><a class="link" href="index.html">Rose-Flower</a></li>
+            <li class="item active"><a class="link " href="index.html">Rose-Flower</a></li>
             <li class="item"><a class="link" href="page/pinkflower.html">Pink-Flower</a></li>
             <li class="item"><a class="link" href="page/Yellowflower.html">Yellow-Flower</a></li>
             <li class="item"><a class="link" href="page/jasmine.html">Jasmine-Flower</a></li>
